Reading the TS docs on babel vs tsc, I'm not sure I actually need babel in this project, so I changed quokka.babel to false.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "author": "Jeremy Kolassa",
   "license": "MIT",
   "quokka": {
-    "babel": true
+    "babel": false
   },
   "dependencies": {
     "mathjs": "^10.6.1"
